src/snapshots/alma__parser__tests__test_module_parser__external_definitions-2.snap
---
source: src/parser.rs
assertion_line: 3311
expression: "parse(\"\\\nmodule Test exposing (main)\n\nexternal test : Bool\ntest = True\n\")"
---
Input:

module Test exposing (main)

external test : Bool
test = True


Result:

:3:0

External definitions can only be used with type signature only definitions. Like this:

    external add5 : Float -> Float

  1│  module Test exposing (main)
  2│  
  3│  external test : Bool
   │  ↑↑↑↑↑↑↑↑
  4│  test = True

Error {
    kind: InvalidExternalDefinition,
    token: Token {
        kind: External,
        indent: 0,
        start: 29,
        end: 37,
        line: 3,
        column: 0,
    },
}
