src/snapshots/alma__parser__tests__test_module_parser__external_definitions.snap
---
source: src/parser.rs
assertion_line: 3697
expression: "parse(\"\\\nmodule Test exposing (main)\n\nexternal test : Bool\n\nexternal test2 : Bool -> Bool\n\")"
---
Input:

module Test exposing (main)

external test : Bool

external test2 : Bool -> Bool


Result:

module Test
    exports:
        main 22:26 22:26
    imports:
        Alma 0:6
            Float 0:6 0:6
            String 0:6 0:6
            Bool 0:6 (True 0:6, False 0:6) 0:6
    type_definitions:

    definitions:
        External
            test 38:42:
                Bool 45:49 45:49
        External
            test2 60:65:
                Fn
                    params:
                        Bool 68:72 68:72
                    Bool 76:80 76:80



