src/snapshots/alma__parser__tests__test_module_parser__function_types-3.snap
---
source: src/parser.rs
assertion_line: 3049
expression: "parse(\"\\\nmodule Test exposing (Fruit)\n\ntype Fruit a b = { f : (a -> b) }\n\")"
---
Input:

module Test exposing (Fruit)

type Fruit a b = { f : (a -> b) }


Result:

(
    Module {
        name: ModuleName {
            parts: [
                CapitalizedIdentifier {
                    name: SymbolU32 {
                        value: 1,
                    },
                    span: Index(
                        0,
                    ),
                },
            ],
            full_name: SymbolU32 {
                value: 1,
            },
        },
        exports: [
            Export {
                span: Index(
                    2,
                ),
                typ: Type {
                    name: CapitalizedIdentifier {
                        name: SymbolU32 {
                            value: 2,
                        },
                        span: Index(
                            1,
                        ),
                    },
                    constructors: [],
                },
            },
        ],
        imports: [],
        definitions: [],
        type_definitions: [
            TypeDefinition {
                span: Index(
                    10,
                ),
                name: CapitalizedIdentifier {
                    name: SymbolU32 {
                        value: 2,
                    },
                    span: Index(
                        3,
                    ),
                },
                vars: [
                    Identifier {
                        name: SymbolU32 {
                            value: 3,
                        },
                        span: Index(
                            4,
                        ),
                    },
                    Identifier {
                        name: SymbolU32 {
                            value: 4,
                        },
                        span: Index(
                            5,
                        ),
                    },
                ],
                typ: Record(
                    Record(
                        Record {
                            span: Index(
                                9,
                            ),
                            fields: [
                                (
                                    Identifier {
                                        name: SymbolU32 {
                                            value: 5,
                                        },
                                        span: Index(
                                            6,
                                        ),
                                    },
                                    Fun {
                                        params: [
                                            Var(
                                                Identifier {
                                                    name: SymbolU32 {
                                                        value: 3,
                                                    },
                                                    span: Index(
                                                        7,
                                                    ),
                                                },
                                            ),
                                        ],
                                        ret: Var(
                                            Identifier {
                                                name: SymbolU32 {
                                                    value: 4,
                                                },
                                                span: Index(
                                                    8,
                                                ),
                                            },
                                        ),
                                    },
                                ),
                            ],
                        },
                    ),
                ),
            },
        ],
    },
    [],
)

{}

{
    Index(
        0,
    ): Span {
        start: Index(
            1,
        ),
        end: Index(
            1,
        ),
    },
    Index(
        1,
    ): Span {
        start: Index(
            4,
        ),
        end: Index(
            4,
        ),
    },
    Index(
        2,
    ): Span {
        start: Index(
            4,
        ),
        end: Index(
            4,
        ),
    },
    Index(
        3,
    ): Span {
        start: Index(
            7,
        ),
        end: Index(
            7,
        ),
    },
    Index(
        4,
    ): Span {
        start: Index(
            8,
        ),
        end: Index(
            8,
        ),
    },
    Index(
        5,
    ): Span {
        start: Index(
            9,
        ),
        end: Index(
            9,
        ),
    },
    Index(
        6,
    ): Span {
        start: Index(
            12,
        ),
        end: Index(
            12,
        ),
    },
    Index(
        7,
    ): Span {
        start: Index(
            15,
        ),
        end: Index(
            15,
        ),
    },
    Index(
        8,
    ): Span {
        start: Index(
            17,
        ),
        end: Index(
            17,
        ),
    },
    Index(
        9,
    ): Span {
        start: Index(
            11,
        ),
        end: Index(
            19,
        ),
    },
    Index(
        10,
    ): Span {
        start: Index(
            6,
        ),
        end: Index(
            19,
        ),
    },
}
