src/snapshots/alma__parser__tests__test_module_parser__function_types.snap
---
source: src/parser.rs
assertion_line: 2962
expression: "parse(\"\\\nmodule Test exposing (Fruit)\n\ntype Fruit a b = Fruit (a -> b)\n\")"
---
Input:

module Test exposing (Fruit)

type Fruit a b = Fruit (a -> b)


Result:

(
    Module {
        name: ModuleName {
            parts: [
                Node {
                    start: Index(
                        1,
                    ),
                    end: Index(
                        1,
                    ),
                    value: CapitalizedIdentifier_ {
                        name: SymbolU32 {
                            value: 1,
                        },
                    },
                },
            ],
            full_name: SymbolU32 {
                value: 1,
            },
        },
        exports: [
            Node {
                start: Index(
                    4,
                ),
                end: Index(
                    4,
                ),
                value: Type(
                    Node {
                        start: Index(
                            4,
                        ),
                        end: Index(
                            4,
                        ),
                        value: CapitalizedIdentifier_ {
                            name: SymbolU32 {
                                value: 2,
                            },
                        },
                    },
                    [],
                ),
            },
        ],
        imports: [],
        definitions: [],
        type_definitions: [
            Node {
                start: Index(
                    6,
                ),
                end: Index(
                    16,
                ),
                value: TypeDefinition_ {
                    name: Node {
                        start: Index(
                            7,
                        ),
                        end: Index(
                            7,
                        ),
                        value: CapitalizedIdentifier_ {
                            name: SymbolU32 {
                                value: 2,
                            },
                        },
                    },
                    vars: [
                        Node {
                            start: Index(
                                8,
                            ),
                            end: Index(
                                8,
                            ),
                            value: Identifier_ {
                                name: SymbolU32 {
                                    value: 3,
                                },
                            },
                        },
                        Node {
                            start: Index(
                                9,
                            ),
                            end: Index(
                                9,
                            ),
                            value: Identifier_ {
                                name: SymbolU32 {
                                    value: 4,
                                },
                            },
                        },
                    ],
                    typ: Union(
                        [
                            Node {
                                start: Index(
                                    11,
                                ),
                                end: Index(
                                    16,
                                ),
                                value: Constructor_ {
                                    name: Node {
                                        start: Index(
                                            11,
                                        ),
                                        end: Index(
                                            11,
                                        ),
                                        value: CapitalizedIdentifier_ {
                                            name: SymbolU32 {
                                                value: 2,
                                            },
                                        },
                                    },
                                    params: [
                                        Fun(
                                            [
                                                Var(
                                                    Node {
                                                        start: Index(
                                                            13,
                                                        ),
                                                        end: Index(
                                                            13,
                                                        ),
                                                        value: Identifier_ {
                                                            name: SymbolU32 {
                                                                value: 3,
                                                            },
                                                        },
                                                    },
                                                ),
                                            ],
                                            Var(
                                                Node {
                                                    start: Index(
                                                        15,
                                                    ),
                                                    end: Index(
                                                        15,
                                                    ),
                                                    value: Identifier_ {
                                                        name: SymbolU32 {
                                                            value: 4,
                                                        },
                                                    },
                                                },
                                            ),
                                        ),
                                    ],
                                },
                            },
                        ],
                    ),
                },
            },
        ],
    },
    [],
)
